# vegspec

./: .README.md.kate-swp  README.md  meta.yaml  setup.cfg
docs/: Literature.bib  document.aux  document.bbl  document.blg  document.tex  document.tex.bak  document.ttt
src/: __init__.py  vegspec.py
src/vegspec/: vegspec.py
src/vegspec.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/test0/: indices.csv  indicesB.csv  sample_spectrum.csv  test0.py  transformations.csv
tests/test1/: derivatives.csv  indices.csv  spectralanalysis-sorted.xlsx  spectralanalysis.py  spectralanalysisB.csv  test1.py
tests/test2/: Fig1a.txt  Fig1b.txt  spectralanalysis-sorted.xlsx  spectralanalysis.csv  spectralanalysis.py
tests/test3/: Fig1c.txt  spectralanalysis-sorted.xlsx  spectralanalysis.py  spectralanalysisB.csv
tests/test4/: spectralanalysis-sorted.xlsx  spectralanalysis.csv  spectralanalysis.py
tests/test5/: 2008_2009_Lesquerella_Biomass_Flower_Silique_CanopyReflectance_PlotAvg.csv  Fig1d.txt  ger1500wl.txt  spectralanalysis-sorted.xlsx  spectralanalysis.csv  spectralanalysis.py
tests/test6/: 2004_Maize_Density6x6_CanopyReflectance_PlotAvg.csv  Fig1e.txt  rdacsh3-120.txt  spectralanalysis-sorted.xlsx  spectralanalysis.csv  spectralanalysis.py
tests/test7/: 2001_Soybean_Cover_CanopyReflectance_PlotAvg.csv  Fig1f.txt  rdacsh3-60.txt  spectralanalysis-sorted.xlsx  spectralanalysis.csv  spectralanalysis.py
