[metadata]
name = vegspec
version = 1.0.0
author = Dr. Kelly R. Thorp
author_email = kelly.thorp@usda.gov
description = Vegetation spectral indices and transformations
long_description = file: README.md
long_description_content_type = text/markdown
url = http://github.com/kthorp/vegspec
project_urls =
    Source = http://github.com/kthorp/vegspec
    Bug Tracker = http://github.com/kthorp/vegspec/issues
license = Public Domain
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    scipy

[options.packages.find]
where = src
